Fixed preview overlay not covering code view

--- a/app/styles/slides.styl
+++ b/app/styles/slides.styl
@@ -160,7 +160,7 @@ ul.slide-list
       content ''
       background-color transparent
       position fixed
-      z-index 10
+      z-index 200
       display block
       width 100%
       height 100%
